<resources>
    <string name="app_name">Application Gianni Randone</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="anschreiben_text">"<b>Bewerbung um eine Werkstudententätigkeit im Bereich Softwareentwicklung"</b>
"

"

"
Sehr geehrte Damen und Herren,

als Student der Wirtschaftsinformatik im Bachelor of Science an der Fachhochschule Dortmund interessiere ich mich, neben dem wirtschaftlichen Aspekt, insbesondere für die Entwicklung und Implementierung von Softwareanwendungen. Um meine erlernten Kenntnisse in der Fachhochschule sowie meine ersten praktischen Erfahrungen zu vertiefen, möchte ich Ihr Unternehmen als Werkstudent unterstützen.

Ich bin sehr praktisch veranlagt und konnte in den vergangenen Projekten in der Fachhochschule diese Fähigkeit sowie meine selbstständige und analytische Arbeitsweise erfolgreich einsetzten. So konnte ich bei dem Thyssenkrupp Manager Cup 2019, bei dem ich mit meinem Team in der Hauptrunde den zweiten Platz belegt habe, erfolgreich meine Teamfähigkeit und strukturierte Denkweise einbringen. Des Weiteren bin ich sehr neugierig und motiviert mich in neue Projekte und Probleme reinzudenken.

Bereits während meiner allgemeinen Hochschulreife habe ich begonnen, mich für den Bereich der Softwarenentwicklung zu interessieren, sodass ich mir als Autodidakt anhand des Programmierens von Android-Applikationen erste Java-Kenntnisse angeeignet habe. Da ich mich neben dem technischen Aspekt auch für die wirtschaftliche Sicht interessiere, habe ich mich für das Studium der Wirtschaftsinformatik entschieden. So konnte ich in den vergangenen Semestern neben meinen Java-Kenntnissen, besonders mein Wissen in den Bereichen des Algorithmenentwurfes und der Datenbanken vertiefen.

Ich freue mich auf ein Kennenlernen mit Ihnen.


Mit freundlichen Grüßen



Gianni Randone
"

"
"</string>

    <string name="persoenlicheDaten_namen">
        <b>Vor-/Nachname: </b>Gianni Randone
    </string>

    <string name="persoenlicheDaten_geburtsdatum">
        <b>Geburtsdatum: </b>01.07.1998
    </string>

    <string name="persoenlicheDaten_geburstort">
        <b>Geburtsort: </b>Hagen, Deutschland
    </string>

    <string name="persoenlicheDaten_staatsangehoerigkeit">
        <b>Staatsangehörigkeit: </b>italienisch
    </string>

    <string name="persoenlicheDaten_allgemeineInformation">
        <i><b>Allgemeine Information: </b>Da es sich lediglich um ein Referenzprojekt handelt und ich zu sensible Daten nicht veröffentlichen will,
           sind etwaige Daten wie Handynummer und privater Wohnanschrift den formellen Bewerbungsunterlagen zu entnehmen.</i>
    </string>

<string name="nav_header_name"><b>Name: </b>Gianni Randone</string>
<string name="nav_header_email"><b>E-Mail: </b>info.randonegianni@gmail.com</string>

    <string name="karriere_daten1">
        <b>09/2018 – heute</b>
    </string>

    <string name="karriere_beschreibungKarriereabschnitt1">
        Fachhochschule Dortmund (Angestrebter Abschluss: Wirtschaftsinformatik B.Sc.)
    </string>

    <string name="karriere_daten2">
        <b>08/2015 – 07/2018</b>
    </string>

    <string name="karriere_beschreibungKarriereabschnitt2">
        Kaufmannsschule II Hagen (Allgemeine Hochschulreife für Wirtschaft und Verwaltung)
    </string>

    <string name="karriere_daten3">
        <b>02/2014 – 02/2014</b>
    </string>

    <string name="karriere_beschreibungKarriereabschnitt3">
        Schülerbetriebspraktikum (Deutsche Bank AG, Hagen)
    </string>

    <string name="karriere_daten4">
        <b>08/2009 – 07/2015</b>
    </string>

    <string name="karriere_beschreibungKarriereabschnitt4">
        Realschule Hohenlimburg (Fachoberschulreife mit Qualifikationsvermerk)
    </string>

    <string name="linkToLinkedIn">
    <a href="https://www.linkedin.com/in/gianni-randone/"><b>LinkedIn-Profil</b></a></string>

    <string name="linkToXing">
    <a href="https://www.xing.com/profile/Gianni_Randone/cv"><b>Xing-Profil</b></a></string>

    <string name="linkToGitHub">
    <a href="https://github.com/giannirandone?tab=repositories"><b>GitHub-Profil</b></a></string>

    <string name="kontaktInformation">
        Sie können mich gerne über die Berufsnetzwerke LinkedIn oder Xing kontaktieren.
        Ebenso werde ich die GitHub-Repository zu dieser Bewerbungsapp veröffentlichen, den Link
        zu meinem Profil finden Sie ebenso unten aufgeführt.
    </string>

    <string name="text_interessenUndPerson">

        <i><b>Zur Information:</b> Dieser Text ist sehr frei formuliert und soll Ihnen einen möglichst authentischen Blick auf meine Person geben. So bitte ich Sie die zum Teil umgangssprachliche Schreibweise dieses Textes zu entschuldigen. </i>
"

"
        Ich bin Gianni Randone, 21 Jahre alt, und sowohl in Hagen geboren wie auch dort (ganz konkret in Hohenlimburg) bis zur Jugend aufgewachsen.
"

"
        Schon sehr früh habe ich mich für Technologien begeistern können, so habe ich
        beispielsweise sehr früh schon (um die Jahrtausendwende herum, also wo ich wirklich noch sehr jung war) unten im Keller am
        damals wenige Jahre alten Pentium-Computer meines Vaters gesessen, wo ich Spiele gespielt und teilweise mich mit Lernsoftware beschäftigt
        habe. Ebenfalls habe ich früher sehr gerne Computer auseinander und wieder zusammengebaut und geschaut, ob diese
        dann noch funktionieren.
"

"
        Verwunderlicherweise kam ich jedoch erst relativ spät als Autodidakt dazu, mir neben der Schule
        das Programmieren beizubringen. Die Idee mir das anzueignen hatte ich schon früher gehabt, nur kam mir das Programmieren durch
        das, was ich zum Teil aus der Schule gesehen habe (oder viel eher sehen musste), doch sehr kryptisch und abstrakt und keineswegs
        kreativ vor, sodass ich nie so wirklich von alleine auf das Thema gestoßen bin. Erst nachdem mein Cousin für seine Projekt-
        und Bachelorarbeit eine Android-App entwickelte, habe ich gesehen, dass das Programmieren doch etwas sehr Tolles sein kann
        und etwas innehat, was ich schon fast mit dem Wort Freiheit beschreiben könnte, zumindest dahingehend, dass man im Grunde alles,
        was man programmieren möchte, auch tatsächlich programmieren kann.
"

"
        Ich selber war schon immer ein sehr neugieriger und
        begeisterungsfähiger Mensch, so habe ich mich privat querbeet mit sehr vielen Dingen beschäftigt, zugegebenermaßen aber eher
        selten so intensiv, dass ich mich dort als wirklich geübt oder talentiert bezeichnen kann - aber das stand für mich nie
        wirklich im Vordergrund. Jedoch wollte ich endlich mal etwas lernen, wo ich meine ganzen Ideen die ich so habe nicht nur in
        meinem Köpfchen verharren lasse, sondern auch mal in die Tat umsetzen kann – und da kam mir das Themenfeld des Programmierens
        doch sehr entgegen, da es im Grunde die wesentlichsten Eigenschaften und Bedürfnisse meiner Person abdecken konnte: Kreativität,
        rationales Denken und die Möglichkeit, seine Ideen auch frei umsetzen zu können. So habe ich beschlossen, in genau diesem Bereich
        beruflich Fuß zu fassen und mich dort intensiver mit der Thematik zu befassen.
"

"
        Für das Themenfeld der Wirtschaft ganz konkret
        begann ich mich um den Sommer 2011 herum tiefergehend zu interessieren, als es einen kleinen Crash an den Börsen gab und dieser mein Interesse
        auf die Zusammenhänge der Wirtschaft zu den Finanzmärkten und der Politik geweckt hat. So kam es in dem Zuge auch zum Praktikum bei
        einer Bank und dem Wirtschaftsabitur. Letztlich habe ich mich sehr bewusst für das Studium der Wirtschaftsinformatik entschieden.

"

"
    </string>

</resources>
