<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_beschreibungKarriere1"
        android:layout_width="180dp"
        android:layout_height="125dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="8dp"
        android:text="@string/karriere_beschreibungKarriereabschnitt1"
        android:textSize="17dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.995"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.014" />

    <TextView
        android:id="@+id/textView_daten1"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="8dp"
        android:text="@string/karriere_daten1"
        android:textSize="17dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.013" />

    <TextView
        android:id="@+id/textView_beschreibungKarriere2"
        android:layout_width="180dp"
        android:layout_height="110dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="8dp"
        android:text="@string/karriere_beschreibungKarriereabschnitt2"
        android:textSize="17dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.995"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238" />

    <TextView
        android:id="@+id/textView_daten2"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="8dp"
        android:text="@string/karriere_daten2"
        android:textSize="17dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

    <TextView
        android:id="@+id/textView_beschreibungKarriere3"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="8dp"
        android:text="@string/karriere_beschreibungKarriereabschnitt3"
        android:textSize="17dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.995"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <TextView
        android:id="@+id/textView_daten3"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="8dp"
        android:text="@string/karriere_daten3"
        android:textSize="17dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <TextView
        android:id="@+id/textView_beschreibungKarriere4"
        android:layout_width="180dp"
        android:layout_height="110dp"
        android:layout_marginTop="35dp"
        android:text="@string/karriere_beschreibungKarriereabschnitt4"
        android:textSize="17dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.995"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631" />

    <TextView
        android:id="@+id/textView_daten4"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="35dp"
        android:text="@string/karriere_daten4"
        android:textSize="17dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62" />
</android.support.constraint.ConstraintLayout>