<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_linkToLinkedIn"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/linkToLinkedIn"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_kontaktInformation"
        app:layout_constraintVertical_bias="0.005" />

    <TextView
        android:id="@+id/textView_linkToXing"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/linkToXing"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_linkToLinkedIn"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/textView_linkToGitHub"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/linkToGitHub"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_linkToXing"
        app:layout_constraintVertical_bias="0.109" />

    <TextView
        android:id="@+id/textView_kontaktInformation"
        android:layout_width="350dp"
        android:layout_height="210dp"
        android:text="@string/kontaktInformation"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />
</android.support.constraint.ConstraintLayout>